k8s/voll-med.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vollmed
  labels:
    app: vollmed
spec:
  replicas: 3
  selector:
    matchLabels:
      app: vollmed
  template:
    metadata:
      labels:
        app: vollmed
    spec:
      containers:
      - name: vollmed-api
        image: leonardosartorello/vollmed:v9
        ports:
        - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /paciente
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 3
